[package]
name = "aoc_auto"
version = "0.0.1"
edition = "2021"
authors = ["feffe feffe@feffe.dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = {version = "0.11.13", features = ["blocking", "cookies", "rustls-tls"], default-features=false}


